Add Phong Shading example.

--- a/Playground/Phong Shading/Lighting.html
+++ b/Playground/Phong Shading/Lighting.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head> 
     <body>
-        <h1>Gouraud Shading Lighting</h1>
+        <h1>Phong Shading Lighting</h1>
         <canvas id="glcanvas" width=640 height="480"></canvas>
     </body>
     <script src="../../libs/gl-matrix.js"></script>
