Fix filepaths to represent new folder structure.

--- a/Playground/Single Object, Colors, Textures/Gouraud Shading/Lighting.html
+++ b/Playground/Single Object, Colors, Textures/Gouraud Shading/Lighting.html
@@ -8,7 +8,7 @@
         <h1>Gouraud Shading Lighting</h1>
         <canvas id="glcanvas" width=640 height="480"></canvas>
     </body>
-    <script src="../../libs/gl-matrix.js"></script>
+    <script src="../../../libs/gl-matrix.js"></script>
     <script src="vs.vert"></script>
     <script src="fs.frag"></script>
     <script src="main.js"></script>
