--- a/Playground/Multiple Objects, Matrices, Colors/Matrices 3d Drawing Color/Matrix3d.html
+++ b/Playground/Multiple Objects, Matrices, Colors/Matrices 3d Drawing Color/Matrix3d.html
@@ -8,8 +8,8 @@
         <h1>Matrix 3D Drawing</h1>
         <canvas id="glcanvas" width=640 height="480"></canvas>
     </body>
-    <script src="../../libs/gl-matrix.js"></script>
-    <script src="../../libs/webgl-debug.js"></script>
+    <script src="../../../libs/gl-matrix.js"></script>
+    <script src="../../../libs/webgl-debug.js"></script>
     <script src="vs.vert"></script>
     <script src="fs.frag"></script>
     <script src="main.js"></script>
