Edit html file text.

--- a/Playground/Multiple Objects, Matrices, Colors/Matrices 3d Drawing Gouraud Color/Matrix3d.html
+++ b/Playground/Multiple Objects, Matrices, Colors/Matrices 3d Drawing Gouraud Color/Matrix3d.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Matrix 3D Drawing</title>
+        <title>Matrix 3D Drawing - Colors, Gouraud Shading</title>
         <meta charset="utf-8">
     </head> 
     <body>
-        <h1>Matrix 3D Drawing</h1>
+        <h1>Matrix 3D Drawing - Colors, Gouraud Shading</h1>
         <canvas id="glcanvas" width=640 height="480"></canvas>
     </body>
     <script src="../../../libs/gl-matrix.js"></script>
