Add fps counter to html.

--- a/Playground/Multiple Objects, Matrices, Colors/Combined/Matrix3d.html
+++ b/Playground/Multiple Objects, Matrices, Colors/Combined/Matrix3d.html
@@ -7,6 +7,9 @@
     <body onload = "main();">
         <h1>Matrix 3D Drawing</h1>
         <canvas id="glcanvas" width=640 height="480"></canvas>
+        <div id="fps-counter">
+            FPS: <span id="fps">--</span>
+        </div>
         <p>Controls</p>
         <p>Left click and drag: Rotate view</p>
         <p>z/x: zoom in/out</p>
