Add FPS counters to html files of individual examples.

--- a/Playground/Multiple Objects, Matrices, Colors/Matrices 3d Drawing Color/Matrix3d.html
+++ b/Playground/Multiple Objects, Matrices, Colors/Matrices 3d Drawing Color/Matrix3d.html
@@ -7,6 +7,9 @@
     <body>
         <h1>Matrix 3D Drawing</h1>
         <canvas id="glcanvas" width=640 height="480"></canvas>
+        <div id="fps-counter">
+            FPS: <span id="fps">--</span>
+        </div>
     </body>
     <script src="../../../libs/gl-matrix.js"></script>
     <script src="../../../libs/webgl-debug.js"></script>
