Add the c/v growth/shrink instructions to the html file.

--- a/Playground/Multiple Objects, Matrices, Colors/Combined/Matrix3d.html
+++ b/Playground/Multiple Objects, Matrices, Colors/Combined/Matrix3d.html
@@ -13,6 +13,7 @@
         <p>Controls</p>
         <p>Left click and drag: Rotate view</p>
         <p>z/x: zoom in/out</p>
+        <p>c/v: grow/shrink the cube</p>
         <p>Arrow keys: rotate the view</p>
         <p>1, 2, 3: Change between no lighting, Gouraud shading, and Phong shading</p>
     </body>
