--- a/Playground/Multiple Objects, Matrices, Colors/Matrices 3d Drawing Phong Color/Matrix3d.html
+++ b/Playground/Multiple Objects, Matrices, Colors/Matrices 3d Drawing Phong Color/Matrix3d.html
@@ -10,6 +10,12 @@
         <div id="fps-counter">
             FPS: <span id="fps">--</span>
         </div>
+        <p>Controls</p>
+        <p>Left click and drag: Rotate view</p>
+        <p>z/x: zoom in/out</p>
+        <p>c/v: grow/shrink the cube</p>
+        <p>Arrow keys: rotate the view</p>
+        <p>1, 2, 3: Change between no lighting, Gouraud shading, and Phong shading</p>
     </body>
     <script src="../../../libs/gl-matrix.js"></script>
     <script src="../../../libs/webgl-debug.js"></script>
